--- a/scripts/RA_figs.rmd
+++ b/scripts/RA_figs.rmd
@@ -32,7 +32,7 @@ source("R/figures.R")
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
 mod <- lm(log(growth_leaf)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
 plot((1+repro_inv)~growth_leaf, SummaryInd, log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
-words.top.left.logxy(mod)
+#words.top.left.logxy(mod)
 legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 abline(0,1)
 text(2.1,3,srt=45,"RA = 0.5")
@@ -47,7 +47,7 @@ text(19,3,srt=45,"RA = 0.1")
 abline(log10(.010101),1)
 text(170,2.4,srt=45,"RA = 0.01")
 
-plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.age(age),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+plot((1+repro_inv)~growth_leaf, SummaryInd, log="xy", col=col.age(age),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
 legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=.8,bty="n")
 abline(0,1)
 text(2.1,3,srt=45,"RA = 0.5")
@@ -62,6 +62,11 @@ text(19,3,srt=45,"RA = 0.1")
 abline(log10(.010101),1)
 text(170,2.4,srt=45,"RA = 0.01")
 ```
+
+
+
+
+
 
 ##2. RA, RV, and "Veg investment by size" (VV) curves for each species  
 * These plots show a lot of scatter...I think it is real  
